SERVER-1701 don't use index key to resolve exists query